# psiaudio

./: .gitignore  .mailmap  .readthedocs.yaml  README.md  pyproject.toml  release.md  setup.py
.github/workflows/: deploy-docs.yml  publish-to-pypi.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst  pipeline_overview.rst  stim-examples.rst
docs/source/api/: psiaudio.buffer.rst  psiaudio.calibration.rst  psiaudio.efr.rst  psiaudio.pipeline.rst  psiaudio.plot.rst  psiaudio.queue.rst  psiaudio.rst  psiaudio.stats.rst  psiaudio.stim.rst  psiaudio.testing.rst  psiaudio.util.rst  psiaudio.version.rst  psiaudio.weighting.rst
examples/: README.rst  notch-noise-abr.py  pipeline-demo.py  play-wav-files.py  queue-introduction.py  queueing-wav-files.py  repeat-chirp.py  stimulus-generation.py  tone-complex.py  tone-pips.py
examples/gallery/: RAM-EFR.py  bandlimited-click.py  calibration-basics.py  chirp.py  gap.py  modulations.py  notch-noise-abr.py  queue-introduction.py  queueing-wav-files.py  ramped_noise.py  repeat-chirp.py  stimulus-generation.py  stm.py  tone-complex.py  tone-pips.py
psiaudio/: __init__.py  api.py  audiograms.py  buffer.py  calibration.py  efr.py  pipeline.py  plot.py  queue.py  stats.py  stim.py  testing.py  util.py  weighting.py
psiaudio/resources/: starship_cal.csv
tests/: conftest.py  run_queue.py  test_calibration.py  test_pipeline.py  test_queue.py  test_signal_buffer.py  test_stim.py  test_stim_factory.py  test_stim_noise.py  test_util.py
tests/pipeline/: conftest.py  test_pipeline.py  test_pipeline_data.py
